force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>LEM-81 :This object is used to store log records which part of logging framework</description>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>