force-app/main/default/objects/Log__c/fields/Class_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Class_Line_Number__c</fullName>
    <description>LEM-81:Line number of the class which caused log</description>
    <label>Class Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>