force-app/main/default/objects/Log__c/fields/Class_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Method_Name__c</fullName>
    <description>LEM-81:This field is used to store method name of the class which created the log</description>
    <label>Class Method Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>