force-app/main/default/objects/Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>LEM-81:This field is used to store name of the class which created log</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>