force-app/main/default/objects/Log__c/fields/Failure_Records_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Records_Count__c</fullName>
    <description>LEM-81:Count of the failed records</description>
    <label>Failure Records Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>