force-app/main/default/objects/Log__c/fields/Governor_Limits_Logged__c.field-meta.xml
<CustomField>
    <fullName>Governor_Limits_Logged__c</fullName>
    <description>LEM-81:Indicates the governor limits of the log</description>
    <label>Governor Limits Logged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>