force-app/main/default/objects/Log__c/fields/Job_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Created_Date__c</fullName>
    <description>LEM-81:Created date of the batch job which caused the log</description>
    <label>Job Created Date</label>
    <type>DateTime</type>
</CustomField>